# pikxels

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  docker-compose-worker.yml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: .env.docker.example  .env.example  land-state-example.json  room-state-example.json
scripts/: docker-entrypoint.sh  fetch_land_state.py  websocket-decrypt.py
src/app/: main.py  settings.py
src/app/api/: _concurrency.py  asgi.py  controllers.py  router.py  services.py
src/app/api/tasks/: _concurrency.py  resource_hunter.py
src/app/cli/: fetch_land_state.py  land_hunt.py  resource_hunter.py  start_api.py  start_discord_bot.py  start_resource_hunter.py  start_worker.py  start_workers.py  tree_hunt.py  websocket_decrypt.py
src/app/cli/start_discord_bot/: __main__.py  _core.py  _utils.py
src/app/cli/tree_hunt/: __main__.py  workers.py
src/app/jobs/: resource_hunter.py
src/app/lib/: concurrency.py  executor.py  proxy.py  redis.py  utils.py
src/app/lib/pixels/land_state/: __init__.py  _core.py  _parser.py
src/app/lib/providers/: webshare.py
src/app/lib/proxy/: __init__.py  _core.py  _webshare.py
src/app/lib/strategies/: websocket.py
src/app/lib/strategies/scraping/: __init__.py  _core.py  _queues.py  _utils.py  land_state.py
src/app/lib/strategies/scraping/land_state/: __init__.py  _core.py  _parsers.py  types.py
src/app/lib/strategies/websocket/: __init__.py  _core.py  types.py
src/app/strategies/scraping/: __init__.py  _core.py  _utils.py
src/app/strategies/websocket/: __init__.py
tests/: load-test.js  test.js
web/chrome-ext/: manifest.json  package.json
web/chrome-ext/src/: App.tsx  main.tsx  vite-env.d.ts
