[tool.poetry]
name = "pixels-monitor"
version = "0.1.0"
description = ""
authors = ["Jairo <jairo.araujo.silva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
websocket-client = "^1.7.0"
playwright = "^1.42.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
cachetools = "^5.3.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
